--- a/index.html
+++ b/index.html
@@ -7,14 +7,42 @@
     <title>Robo UR3e</title>
 </head>
 <body>
-    
+    <nav>
+        <a href="./index.html">UR3e</a>
+        <a href="./funçoes.html">Mais sobre</a>
+    </nav>
 </body>
 </html>
 <main>
     <h1>Robo UR3e</h1>
-    <p>O UR3e é um braço robótico colaborativo compacto da Universal Robots, ideal para tarefas de alta precisão em espaços reduzidos, como montagem leve, parafusamento, dispensação e automação de bancada. Com 6 eixos, carga útil de até 3 kg, alcance de 500 mm e repetibilidade de ±0,03 mm, ele é projetado para operar com segurança ao lado de humanos, graças a sensores e sistemas de detecção de colisão. É leve (cerca de 11 kg), fácil de instalar e programar, e oferece rotação infinita no pulso, sendo muito utilizado em linhas de produção, laboratórios e aplicações industriais de pequeno porte.</p>
+    <p>Tendo um tamanho pequeno o robô UR3e acaba sendo um robô
+        colaborativo, usado para eficiência em espaço de trabalho
+        pequeno, oferecendo flexibilidade e precisão incomparável, embora
+        possa ser montado em uma mesa que trabalha lado a lado com os
+        funcionários também pode ser colocado numa estação de trabalho
+        separada para soluções que incluem recolha, montagem e
+        colocação de peças. Conceitos básicos
+        nas indústrias ele age nas linhas de montagens modernas
+        atendendo uma ampla gama de necessidades de produção,
+        podendo reduzir significativamente o tempo de
+        montagem,aumentar a velocidade de produção e melhorando a
+        qualidade do produto, já colaborativamente ele trabalha em
+        conjunto com outros funcionários melhorando a qualidade de
+        produtos e ajudando com montagem, claro, também com
+        armazenamento e manuseio de materiais. Aplicações do robô na indústria
+        agindo em diferentes setores, como dito antes, montagem,
+        dispensa, manuseio, entre outros.
+        A muitas operações de montagem que integram o robô, como onde
+        componentes individuais são reunidos para desenvolver sistemas
+        unificados, no entanto, geralmente essa automação trás riscos de
+        segurança e dores de cabeça de manutenção que podem levar a
+        paragens dispendiosas. Também com colagem, vedação,
+        pintura na dispensa,remoção de material, como rebarbas,
+        perfurações, pequenos erros, controle de qualidade, testes,solda,
+        entre outros.</p>
+        
     <div class="foto_robo">
-        <img src="./img/fotour3e.webp" alt="">
+        <img src="./img/343x480.webp" alt="">
     </div>
     <p>A Universal Robots é uma empresa dinamarquesa fundada em 2005 por três estudantes universitários — Esben Østergaard, Kasper Støy e Kristian Kassow — na cidade de Odense, Dinamarca. 
         universal-robots.com
@@ -38,5 +66,14 @@
         <h1>Robo UR3e funcionando</h1>
         <div class="video_robo">
             <iframe width="360" height="360" src="https://www.youtube.com/embed/NGlTRErHkPs?si=JEe4YENZamHRRbGr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <h1>Como é fabricado os robores colaborativos</h1>
+        <p>A fabricação do robô UR3e, como a de outros robôs colaborativos (cobots) da Universal Robots, envolve a montagem de componentes de alta qualidade, tecnologia avançada de sensores e software, e um design focado na flexibilidade e segurança. Embora a empresa não divulgue publicamente detalhes específicos do processo de produção em si, é possível inferir as etapas e os materiais com base nas informações técnicas disponíveis. </p>
+        <div class="foto_industria">
+            <img src="./img/Website_Version-06_2018_Elos-Medtech_Sweden_retouched-1-768x513.png" alt="">
+        </div>
+        <h1>Onde esta locaizado a universal robots:</h1>
+        <div class="mapa_robo">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.2389956343604!2d2.2069150760609126!3d41.41233037129672!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a35987da920b%3A0x16e8397730b92b8c!2sUniversal%20Robots%20A%2FS!5e0!3m2!1spt-BR!2sbr!4v1757702639698!5m2!1spt-BR!2sbr" width="360" height="360" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </main>
