--- a/funçoes.html
+++ b/funçoes.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Mais sobre</title>
-</head>
-<body>
-    <nav>
-        <a href="./index.html">Robo UR3e</a>
-        <a href="./funçoes.html">Mais sobre</a>
-
-    </nav>
-</body>
-</html>
-<main>
-    <h1>detalhes</h1>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../css/style.css">
+        <title>Mais sobre</title>
+    </head>
+    <body>
+        <nav>
+            <a href="./index.html">Robo UR3e</a>
+            <a href="./funçoes.html">Mais sobre</a>
+            
+        </nav>
+    </body>
+    </html>
+    <main>
+        <h1>Detalhes</h1>
+        <footer> 
+            by Mafra &copy; &trade;
+        </footer>
     <p>robo UR3e detalhes
         O robô UR3e é um robô colaborativo ultracompacto da série e da Universal Robots, projetado para tarefas de montagem leve e cenários de bancada automatizada. Sua pequena área de ocupação e peso leve permitem que seja usado em espaços de trabalho apertados, e a programação intuitiva o torna acessível a operadores sem experiência. 
         Universal Robots UR3 / UR3e Collaborative Table-Top Robot ...
@@ -30,19 +33,23 @@
         Montagem: Pode ser montado em qualquer orientação.
         Sistema de segurança: 17 funções de segurança configuráveis para assegurar a colaboração segura entre humanos e máquinas. 
         Aplicações
-        O UR3e é ideal para uma variedade de tarefas que requerem precisão em espaços limitados: 
-        Montagem: Perfeito para montagem leve e manipulação de componentes pequenos.
-        Pick and place (Pegar e colocar): A alta precisão o torna ideal para a movimentação de peças com eficiência.
-        Dosagem: Utilizado em processos que exigem a aplicação precisa de materiais.
-        Manuseio de materiais: Manuseio de componentes em diferentes etapas da produção.
-        Integração em máquinas: Seu tamanho compacto permite que seja instalado diretamente em máquinas ou células de trabalho. 
-        Programação e usabilidade
-        A linha e-Series, incluindo o UR3e, foi projetada para ser fácil de usar, mesmo para operadores sem experiência em programação de robôs. 
-        Programação intuitiva: A configuração e operação são feitas por meio de um pendente de ensino com tela sensível ao toque, usando uma interface visual 3D.
-        Movimentação manual: O braço do robô pode ser guiado manualmente até os pontos desejados para programar a trajetória.
-        Implementação rápida: O tempo de instalação pode ser reduzido de semanas para horas, com uma configuração inicial que pode levar menos de uma hora.
-        Implementação flexível: Por ser leve e ter uma área de ocupação pequena, o robô pode ser facilmente realocado para diferentes tarefas na linha de produção. </p>
-     <div>
+         </p>
+         <div>
+             <img src="./img/nao.png" alt="">
+         </div>
+         <p>O UR3e é ideal para uma variedade de tarefas que requerem precisão em espaços limitados: 
+            Montagem: Perfeito para montagem leve e manipulação de componentes pequenos.
+            Pick and place (Pegar e colocar): A alta precisão o torna ideal para a movimentação de peças com eficiência.
+            Dosagem: Utilizado em processos que exigem a aplicação precisa de materiais.
+            Manuseio de materiais: Manuseio de componentes em diferentes etapas da produção.
+            Integração em máquinas: Seu tamanho compacto permite que seja instalado diretamente em máquinas ou células de trabalho. 
+            Programação e usabilidade
+            A linha e-Series, incluindo o UR3e, foi projetada para ser fácil de usar, mesmo para operadores sem experiência em programação de robôs. 
+            Programação intuitiva: A configuração e operação são feitas por meio de um pendente de ensino com tela sensível ao toque, usando uma interface visual 3D.
+            Movimentação manual: O braço do robô pode ser guiado manualmente até os pontos desejados para programar a trajetória.
+            Implementação rápida: O tempo de instalação pode ser reduzido de semanas para horas, com uma configuração inicial que pode levar menos de uma hora.
+            Implementação flexível: Por ser leve e ter uma área de ocupação pequena, o robô pode ser facilmente realocado para diferentes tarefas na linha de produção.</p>
+     <div class="Foto_robo01">
         <img src="./img/The-Universal-Robot-UR5-has-6-dof-which-can-be-utilised-with-the-gesture-control-system.png" alt="">
      </div>
      <h1>usado em:</h1>
@@ -61,7 +68,11 @@
             Precisão: Ideal para tarefas que exigem alta precisão, como na indústria eletrónica e médica. 
             Aplicações de Tratamento de Superfícies: A sua aplicação abrange desde polimento a soldadura, cobrindo diferentes necessidades de acabamento. 
             </p>
-            <div>
+            <div class="Foto_robo0">
                 <img src="./img/sim.png" alt="">
-            </div>
-    </main>
+                <h1>Sim, ele joga jogos fisicos</h1>
+                <p>Devido sua grande precisão, ele é capaz de jogar jogos e mutas outras coisas, cada movimento é calculado, exelente para coisas precisas, pequenas e delicadas, é um grande pulo pro futuro, criar uma maquina desse calibre é muito importante para avançarmos no futuro, existe outros robos com as mesmas funções, UR3e é so mais um da grande variedade de robos no mundo.</p>
+                <div class="Video_robo">
+                    <iframe width="360" height="315" src="https://www.youtube.com/embed/HNCQyWkqkCs?si=GSY8vhxCrW-7edyK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+            </main>
