--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 </head>
 <body>
     <nav>
-        <a href="./index.html">UR3e</a>
+        <a href="./index.html">Robo UR3e</a>
         <a href="./funçoes.html">Mais sobre</a>
     </nav>
 </body>
 </html>
 <main>
     <h1>Robo UR3e</h1>
+    <footer> 
+        by Mafra &copy; &trade;
+    </footer>
     <p>Tendo um tamanho pequeno o robô UR3e acaba sendo um robô
         colaborativo, usado para eficiência em espaço de trabalho
         pequeno, oferecendo flexibilidade e precisão incomparável, embora
@@ -76,4 +79,5 @@
         <div class="mapa_robo">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.2389956343604!2d2.2069150760609126!3d41.41233037129672!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a35987da920b%3A0x16e8397730b92b8c!2sUniversal%20Robots%20A%2FS!5e0!3m2!1spt-BR!2sbr!4v1757702639698!5m2!1spt-BR!2sbr" width="360" height="360" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+        
     </main>
